try to fix scrollbars

--- a/mirror.css
+++ b/mirror.css
@@ -5,3 +5,24 @@ body {
 body html {
   overflow: hidden;
 }
+
+.player {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #f1f1f1;
+  font-family: 'Open Sans',sans-serif;
+  font-weight: 300;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.player video {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
